# kdbai-mcp-server

./: pyproject.toml
src/mcp_server/utils/: embeddings.csv  embeddings.py  filters.py
